force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/Forrester_SHIR_CASE_INSTITUTION_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_INSTITUTION_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_INSTITUTION_VIEW</externalName>
    <label>Forrester_SHIR_CASE_INSTITUTION_VIEW</label>
    <pluralLabel>Forrester_SHIR_CASE_INSTITUTION_VIEW</pluralLabel>
</CustomObject>