force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/CASE_INSTITUTION_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_INSTITUTION_RECID__c</fullName>
    <description>CASE_INSTITUTION_RECID</description>
    <externalDeveloperName>CASE_INSTITUTION_RECID</externalDeveloperName>
    <label>Case Institution RecId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>