force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>Case</label>
    <length>24</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Institutions</relationshipLabel>
    <relationshipName>Forrester_SHIR_CASE_INSTITUTION_VIEW</relationshipName>
    <type>ExternalLookup</type>
</CustomField>