force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/CODE__c.field-meta.xml
<CustomField>
    <fullName>CODE__c</fullName>
    <description>CODE</description>
    <externalDeveloperName>CODE</externalDeveloperName>
    <label>CODE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>