force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/FUNDER_FLAG__c.field-meta.xml
<CustomField>
    <fullName>FUNDER_FLAG__c</fullName>
    <description>FUNDER_FLAG</description>
    <externalDeveloperName>FUNDER_FLAG</externalDeveloperName>
    <label>Funder</label>
    <length>3</length>
    <type>Text</type>
</CustomField>