force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/HOME_FLAG__c.field-meta.xml
<CustomField>
    <fullName>HOME_FLAG__c</fullName>
    <description>HOME_FLAG</description>
    <externalDeveloperName>HOME_FLAG</externalDeveloperName>
    <label>Home</label>
    <length>3</length>
    <type>Text</type>
</CustomField>