force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/INSTITUTION_NAME__c.field-meta.xml
<CustomField>
    <fullName>INSTITUTION_NAME__c</fullName>
    <description>INSTITUTION_NAME</description>
    <externalDeveloperName>INSTITUTION_NAME</externalDeveloperName>
    <label>Institution</label>
    <length>90</length>
    <type>Text</type>
</CustomField>