force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/INSTITUTION_RECID__c.field-meta.xml
<CustomField>
    <fullName>INSTITUTION_RECID__c</fullName>
    <description>INSTITUTION_RECID</description>
    <externalDeveloperName>INSTITUTION_RECID</externalDeveloperName>
    <label>INSTITUTION_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>