force-app/main/default/objects/Forrester_SHIR_CASE_INSTITUTION_VIEW__x/fields/REFERENCE_NUM__c.field-meta.xml
<CustomField>
    <fullName>REFERENCE_NUM__c</fullName>
    <description>REFERENCE_NUM</description>
    <externalDeveloperName>REFERENCE_NUM</externalDeveloperName>
    <label>Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>